DBC22-4028: Fixed layers menu height to bottom of header on mobile

--- a/src/frontend/src/Components/map/filter/FilterTabs.scss
+++ b/src/frontend/src/Components/map/filter/FilterTabs.scss
@@ -22,6 +22,7 @@ button.btn.open-filters {
   box-shadow: 0px 1.937px 4.358px 0px rgba(0, 0, 0, 0.13), 0px 0.363px 1.089px 0px rgba(0, 0, 0, 0.10);
   display: flex;
   flex-direction: column;
+  max-height: calc(100% - 120px);
 
   &.closed {
     display: contents;
